--- a/.github/workflows/luckywheel_lint_ci.yml
+++ b/.github/workflows/luckywheel_lint_ci.yml
@@ -1,13 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Lucky Wheel CI
+name: Lint debug
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
-   # branches: [ "main" ]
- # pull_request:
+  # branches: [ "main" ]
+  # pull_request:
   #  branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -16,7 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  lint:
+    name: lint debug variant
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -25,12 +26,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      #setup java jdk
+      - uses: actions/setup-java@v5
+        with:
+          distribution: "temurin"
+          java-version: "11"
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
+      - name: Execute gradle execute command - lintdebug
+        run: ./gradlew lintDebug
