--- a/.github/workflows/luckywheel_lint_ci.yml
+++ b/.github/workflows/luckywheel_lint_ci.yml
@@ -5,10 +5,10 @@ name: Lint debug
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  #push:
-  # branches: [ "main" ]
-  # pull_request:
-  #  branches: [ "main" ]
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,5 +34,8 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Execute gradle execute command - lintdebug
         run: ./gradlew lintDebug
